--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -1,3 +1,51 @@
-<p>
-  footer works!
-</p>
+    <div class="footer">
+      <div class="container">
+        <div class="footer__logo"><a routerLink="#" class="logo"><img src="assets/img/logo.png" alt=""></a></div>
+        <div class="footer__content">
+          <div class="item">
+            <ul class="nav-menu">
+              <li><a routerLink="#" class="active">Home</a></li>
+              <li><a routerLink="#">Testimonials</a></li>
+              <li><a routerLink="#">Contact</a></li>
+              <li class="dropdown dropdown-up">
+                <a routerLink="#" class="dropdown-link js-dropdown-link">More</a>
+                <ul class="dropdown-data">
+                  <li><a routerLink="#">Terms and conditions</a></li>
+                  <li><a routerLink="#">AML privacy</a></li>
+                  <li><a routerLink="#">Fees & discounts</a></li>
+                  <li><a routerLink="#">Privacy policy</a></li>
+                  <li><a routerLink="#">Fees & discount</a></li>
+                  <li><a routerLink="#">FAQ</a></li>
+                  <li><a routerLink="#">NEWS</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
+          <div class="item">
+            <ul>
+              <li><a routerLink="#">Terms and conditions</a></li>
+              <li><a routerLink="#">AML policy</a></li>
+              <li><a routerLink="#">Privacy policy</a></li>
+              <li><a routerLink="#">Fees & discounts</a></li>
+            </ul>
+          </div>
+
+          <div class="item">
+            <div class="share">
+              <div class="share__title">
+                <span class="title">You can find us:</span>
+              </div>
+              <div class="share__content">
+                <a routerLink="#" class="ic ic-fb cbutton cbutton--effect-radomir"></a>
+                <a routerLink="#" class="ic ic-gplus cbutton cbutton--effect-radomir"></a>
+                <a routerLink="#" class="ic ic-vk cbutton cbutton--effect-radomir"></a>
+                <div class="develop">
+                  <a routerLink="#" class="ic ic-unicash cbutton cbutton--effect-radomir"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
