--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -1,3 +1,67 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <div class="container">
+    <div class="header-logo">
+      <a routerLink="/" class="logo"><img src="../assets/img/logo.png" alt=""></a>
+    </div>
+
+    <div class="transform-to-mobile">
+      <nav class="header-menu">
+        <ul class="nav-menu">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-link js-dropdown-link">More</a>
+            <ul class="dropdown-data">
+              <li><a href="#">Terms and conditions</a></li>
+              <li><a href="#">AML privacy</a></li>
+              <li><a href="#">Fees & discounts</a></li>
+              <li><a href="#">Privacy policy</a></li>
+              <li><a href="#">Fees & discount</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">NEWS</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header-btn">
+        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Registrace</a>
+        <a href="#" class="btn btn-accent rippler rippler-default">Přihlásit</a>
+
+        <!-- <div class="dropdown">
+                      <a href="#" class="btn btn-accent rippler rippler-default js-dropdown-link"><span class="dropdown-link">Přihlásit</span></a>
+                      <div class="dropdown-data">
+                          <ul>
+                              <li><a href="#">Nastavení</a></li>
+                              <li><a href="#">Historie Transakcí</a></li>
+                              <li><a href="#">Invite Friends</a></li>
+                              <li><a href="#">Další položka</a></li>
+                          </ul>
+                          <hr class="full-width">
+                          <a href="#" class="logout">Log Out</a>
+                      </div>
+                  </div> -->
+      </div>
+
+      <div class="header-lang">
+        <div class="dropdown">
+          <a href="#" class="dropdown-link js-dropdown-link">EN</a>
+          <div class="dropdown-data">
+            <ul>
+              <li><a href="#">RU</a></li>
+              <li><a href="#">CZ</a></li>
+              <li><a href="#">SK</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <button class="hamburger hamburger--collapse" type="button">
+					<span class="hamburger-box">
+						<span class="hamburger-inner"></span>
+					</span>
+      </button>
+    </div>
+  </div>
+</div>
