--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -6,7 +6,7 @@
             <ul class="nav-menu">
               <li><a routerLink="#" class="active">Home</a></li>
               <li><a routerLink="#">Testimonials</a></li>
-              <li><a routerLink="#">Contact</a></li>
+              <li><a routerLink="/contacts">Contact</a></li>
               <li class="dropdown dropdown-up">
                 <a routerLink="#" class="dropdown-link js-dropdown-link">More</a>
                 <ul class="dropdown-data">
