--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -9,7 +9,7 @@
         <ul class="nav-menu">
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/contacts">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-link js-dropdown-link">More</a>
             <ul class="dropdown-data">
