[DANIL] Добавил FAQ

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -15,7 +15,7 @@
                   <li><a routerLink="#">Fees & discounts</a></li>
                   <li><a routerLink="#">Privacy policy</a></li>
                   <li><a routerLink="#">Fees & discount</a></li>
-                  <li><a routerLink="#">FAQ</a></li>
+                  <li><a routerLink="/faq">FAQ</a></li>
                   <li><a routerLink="#">NEWS</a></li>
                 </ul>
               </li>
