[DANIL] поправил ссылку в шапке

--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -18,7 +18,7 @@
               <li><a href="#">Fees & discounts</a></li>
               <li><a href="#">Privacy policy</a></li>
               <li><a href="#">Fees & discount</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a routerLink="/faq">FAQ</a></li>
               <li><a href="#">NEWS</a></li>
             </ul>
           </li>
