[DANIL] добавил страницу Fees + add animate css

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -12,7 +12,7 @@
                 <ul class="dropdown-data">
                   <li><a routerLink="#">Terms and conditions</a></li>
                   <li><a routerLink="#">AML privacy</a></li>
-                  <li><a routerLink="#">Fees & discounts</a></li>
+                  <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
                   <li><a routerLink="#">Privacy policy</a></li>
                   <li><a routerLink="#">Fees & discount</a></li>
                   <li><a routerLink="/faq">FAQ</a></li>
