--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -15,7 +15,7 @@
             <ul class="dropdown-data">
               <li><a href="#">Terms and conditions</a></li>
               <li><a href="#">AML privacy</a></li>
-              <li><a href="#">Fees & discounts</a></li>
+              <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
               <li><a href="#">Privacy policy</a></li>
               <li><a href="#">Fees & discount</a></li>
               <li><a routerLink="/faq">FAQ</a></li>
