--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,5 +1,5 @@
 
-  <div class="main contact-page">
+  <div class="main contact-page fadeIn animated">
     <div class="container">
 
       <header class="content__header">
