--- a/src/app/fees-discount/fees-discount.component.html
+++ b/src/app/fees-discount/fees-discount.component.html
@@ -28,7 +28,7 @@
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/adv-cash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../../assets/img/adv-cash.png);"></div>
                       <div class="currency-name">Adv Cash</div>
                     </div>
                   </th>
