--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -1,12 +1,12 @@
-    <div class="footer">
+    <div class="footer fadeIn animated">
       <div class="container">
         <div class="footer__logo"><a routerLink="#" class="logo"><img src="assets/img/logo.png" alt=""></a></div>
         <div class="footer__content">
           <div class="item">
             <ul class="nav-menu">
-              <li><a routerLink="#" class="active">Home</a></li>
+              <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
               <li><a routerLink="#">Testimonials</a></li>
-              <li><a routerLink="/contacts">Contact</a></li>
+              <li><a routerLink="/contacts" routerLinkActive="active">Contact</a></li>
               <li class="dropdown dropdown-up">
                 <a routerLink="#" class="dropdown-link js-dropdown-link">More</a>
                 <ul class="dropdown-data">
@@ -16,7 +16,7 @@
                   <li><a routerLink="#">Privacy policy</a></li>
                   <li><a routerLink="#">Fees & discount</a></li>
                   <li><a routerLink="/faq">FAQ</a></li>
-                  <li><a routerLink="#">NEWS</a></li>
+                  <li><a routerLink="/news">NEWS</a></li>
                 </ul>
               </li>
             </ul>
