[DANIL] добавил страницу landing magazine

--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -15,9 +15,9 @@
             <ul class="dropdown-data">
               <li><a href="#">Terms and conditions</a></li>
               <li><a href="#">AML privacy</a></li>
-              <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
+              <li><a routerLink="/landingmagazine">Landing Magazine</a></li>
               <li><a href="#">Privacy policy</a></li>
-              <li><a href="#">Fees & discount</a></li>
+              <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
               <li><a routerLink="/faq">FAQ</a></li>
               <li><a href="#">NEWS</a></li>
             </ul>
