--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -12,9 +12,9 @@
                 <ul class="dropdown-data">
                   <li><a routerLink="#">Terms and conditions</a></li>
                   <li><a routerLink="#">AML privacy</a></li>
-                  <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
+                  <li><a routerLink="/landingmagazine">Landing Magazine</a></li>
                   <li><a routerLink="#">Privacy policy</a></li>
-                  <li><a routerLink="#">Fees & discount</a></li>
+                  <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
                   <li><a routerLink="/faq">FAQ</a></li>
                   <li><a routerLink="#">NEWS</a></li>
                 </ul>
