[DANIL] перенес js в компонент (dropdown)

--- a/src/app/fees-discount/fees-discount.component.html
+++ b/src/app/fees-discount/fees-discount.component.html
@@ -28,70 +28,70 @@
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(../../assets/img/adv-cash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../../../assets/img/adv-cash.png);"></div>
                       <div class="currency-name">Adv Cash</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/bitcoin.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
                       <div class="currency-name">Bitcoin</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/dash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/dash.png);"></div>
                       <div class="currency-name">Dash</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/etherium.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/etherium.png);"></div>
                       <div class="currency-name">Ether</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/litecoin.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/litecoin.png);"></div>
                       <div class="currency-name">Litecoin</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/monelo.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/monelo.png);"></div>
                       <div class="currency-name">Monelo</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/ripple.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/ripple.png);"></div>
                       <div class="currency-name">Ripple</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/payeer.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/payeer.png);"></div>
                       <div class="currency-name">Payeer</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/perfect-money.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/perfect-money.png);"></div>
                       <div class="currency-name">Perfect M.</div>
                     </div>
                   </th>
 
                   <th>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/zcash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/zcash.png);"></div>
                       <div class="currency-name">Zcash</div>
                     </div>
                   </th>
@@ -102,7 +102,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/adv-cash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/adv-cash.png);"></div>
                       <div class="currency-name">Adv Cash</div>
                     </div>
                   </td>
@@ -121,7 +121,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/bitcoin.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/bitcoin.png);"></div>
                       <div class="currency-name">Bitcoin</div>
                     </div>
                   </td>
@@ -140,7 +140,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/dash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/dash.png);"></div>
                       <div class="currency-name">Dash</div>
                     </div>
                   </td>
@@ -159,7 +159,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/etherium.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/etherium.png);"></div>
                       <div class="currency-name">Ether</div>
                     </div>
                   </td>
@@ -178,7 +178,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/litecoin.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/litecoin.png);"></div>
                       <div class="currency-name">Litecoint</div>
                     </div>
                   </td>
@@ -198,7 +198,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/monelo.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/monelo.png);"></div>
                       <div class="currency-name">Monelo</div>
                     </div>
                   </td>
@@ -217,7 +217,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/ripple.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/ripple.png);"></div>
                       <div class="currency-name">Ripple</div>
                     </div>
                   </td>
@@ -236,7 +236,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/payeer.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/payeer.png);"></div>
                       <div class="currency-name">Payeer</div>
                     </div>
                   </td>
@@ -255,7 +255,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/perfect-money.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/perfect-money.png);"></div>
                       <div class="currency-name">Pfct M.</div>
                     </div>
                   </td>
@@ -274,7 +274,7 @@
                 <tr>
                   <td>
                     <div class="currency">
-                      <div class="currency-icons" style="background-image: url(assets/img/zcash.png);"></div>
+                      <div class="currency-icons" style="background-image: url(../assets/img/zcash.png);"></div>
                       <div class="currency-name">Zcash</div>
                     </div>
                   </td>
