--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -1,6 +1,6 @@
     <div class="footer fadeIn animated">
       <div class="container">
-        <div class="footer__logo"><a routerLink="#" class="logo"><img src="assets/img/logo.png" alt=""></a></div>
+        <div class="footer__logo"><a routerLink="#" class="logo"><img src="../assets/img/logo.png" alt=""></a></div>
         <div class="footer__content">
           <div class="item">
             <ul class="nav-menu">
