--- a/src/app/landing-magazine/landing-magazine.component.html
+++ b/src/app/landing-magazine/landing-magazine.component.html
@@ -15,21 +15,21 @@
           <div class="advantages blank-self tape-top">
             <div class="item">
               <div class="item-icons">
-                <img src="assets/img/adv-icons1.png" alt="Staňte se doporučitelem">
+                <img src="../assets/img/adv-icons1.png" alt="Staňte se doporučitelem">
               </div>
               <div class="item-title"><span>Staňte se <br>doporučitelem</span></div>
             </div>
 
             <div class="item">
               <div class="item-icons">
-                <img src="assets/img/adv-icons2.png" alt="Staňte se velkoodběratele">
+                <img src="../assets/img/adv-icons2.png" alt="Staňte se velkoodběratele">
               </div>
               <div class="item-title"><span>Staňte se <br>velkoodběratelem</span></div>
             </div>
 
             <div class="item">
               <div class="item-icons">
-                <img src="assets/img/adv-icons3.png" alt="Otevřete si směnárnu">
+                <img src="../assets/img/adv-icons3.png" alt="Otevřete si směnárnu">
               </div>
               <div class="item-title"><span>Otevřete si <br>směnárnu</span></div>
             </div>
@@ -53,7 +53,7 @@
               </div>
 
               <div class="item-image">
-                <img src="assets/img/magazine-image1.png" alt="">
+                <img src="../assets/img/magazine-image1.png" alt="">
               </div>
             </div>
 
@@ -74,7 +74,7 @@
               </div>
 
               <div class="item-image">
-                <img src="assets/img/magazine-image3.png" alt="">
+                <img src="../assets/img/magazine-image3.png" alt="">
               </div>
             </div>
 
@@ -102,7 +102,7 @@
               </div>
 
               <div class="item-image">
-                <img src="assets/img/magazine-image2.png" alt="">
+                <img src="../assets/img/magazine-image2.png" alt="">
               </div>
             </div>
           </div>
