[DANIL] добавил компоненты

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -5,7 +5,7 @@
           <div class="item">
             <ul class="nav-menu">
               <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-              <li><a routerLink="#">Testimonials</a></li>
+              <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
               <li><a routerLink="/contacts" routerLinkActive="active">Contact</a></li>
               <li class="dropdown dropdown-up">
                 <a routerLink="#" class="dropdown-link js-dropdown-link">More</a>
@@ -13,6 +13,10 @@
                   <li><a routerLink="#">Terms and conditions</a></li>
                   <li><a routerLink="#">AML privacy</a></li>
                   <li><a routerLink="/landingmagazine">Landing Magazine</a></li>
+                  <li><a routerLink="/partners">Partners</a></li>
+                  <li><a routerLink="/tablehistory">TableHistory</a></li>
+                  <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
+                  <li><a routerLink="/transactions">Transactions</a></li>
                   <li><a routerLink="#">Privacy policy</a></li>
                   <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
                   <li><a routerLink="/faq">FAQ</a></li>
