--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -8,7 +8,7 @@
       <nav class="header-menu">
         <ul class="nav-menu">
           <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-          <li><a href="#">Testimonials</a></li>
+          <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
           <li><a routerLink="/contacts" routerLinkActive="active">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-link js-dropdown-link">More</a>
@@ -16,6 +16,10 @@
               <li><a href="#">Terms and conditions</a></li>
               <li><a href="#">AML privacy</a></li>
               <li><a routerLink="/landingmagazine">Landing Magazine</a></li>
+              <li><a routerLink="/partners">Partners</a></li>
+              <li><a routerLink="/tablehistory">TableHistory</a></li>
+              <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
+              <li><a routerLink="/transactions">Transactions</a></li>
               <li><a href="#">Privacy policy</a></li>
               <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
               <li><a routerLink="/faq">FAQ</a></li>
