[Slava] add settings

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -8,7 +8,7 @@
               <li><a routerLink="/testimonials" routerLinkActive="active">Testimonials</a></li>
               <li><a routerLink="/contacts" routerLinkActive="active">Contact</a></li>
               <li class="dropdown dropdown-up">
-                <a routerLink="#" class="dropdown-link js-dropdown-link">More</a>
+                <a href="#" class="dropdown-link js-dropdown-link">More</a>
                 <ul class="dropdown-data">
                   <li><a routerLink="#">Terms and conditions</a></li>
                   <li><a routerLink="#">AML privacy</a></li>
@@ -22,6 +22,7 @@
                   <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
                   <li><a routerLink="/transactions">Transactions</a></li>
                   <li><a routerLink="/partners">Partners</a></li>
+                  <li><a routerLink="/settings">settings</a></li>
                 </ul>
               </li>
             </ul>
