--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header fadeIn animated">
   <div class="container">
     <div class="header-logo">
       <a routerLink="/" class="logo"><img src="../assets/img/logo.png" alt=""></a>
@@ -16,6 +16,7 @@
               <li><a href="#">Terms and conditions</a></li>
               <li><a href="#">AML privacy</a></li>
               <li><a href="#">Privacy policy</a></li>
+              <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
               <li><a routerLink="/faq">FAQ</a></li>
               <li><a routerLink="/news">NEWS</a></li>
               <li></li>
@@ -24,7 +25,7 @@
               <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
               <li><a routerLink="/transactions">Transactions</a></li>
               <li><a routerLink="/partners">Partners</a></li>
-              <li><a routerLink="/feesdiscount">Fees & discounts</a></li>
+              <li><a routerLink="/settings">settings</a></li>
 
             </ul>
           </li>
