--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,5 +1,5 @@
 
-  <div class="main inner">
+  <div class="main inner fadeIn animated">
     <div class="container">
 
       <header class="content__header">
