[Slava] add settings

--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -25,7 +25,7 @@
               <li><a routerLink="/tablehistoryreviews">TableHistoryReviews</a></li>
               <li><a routerLink="/transactions">Transactions</a></li>
               <li><a routerLink="/partners">Partners</a></li>
-              <li><a routerLink="/settings">settings</a></li>
+              <li><a routerLink="/settings">Settings</a></li>
 
             </ul>
           </li>
