[Slava] add fadeIn animated

--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -1,4 +1,4 @@
-<div class="main main-single">
+<div class="main main-single fadeIn animated">
   <div class="container">
 
     <header class="content__header">
