--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-<div class="main transcations inner-large">
+<div class="main transcations inner-large fadeIn animated">
   <div class="container">
 
     <header class="content__header">
