--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,4 +1,4 @@
-<div class="main inner-large">
+<div class="main inner-large fadeIn animated">
   <div class="container">
 
     <header class="content__header">
