[DANIL] добавил страницу discount

--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -23,6 +23,7 @@
                   <li><a routerLink="/transactions">Transactions</a></li>
                   <li><a routerLink="/partners">Partners</a></li>
                   <li><a routerLink="/settings">Settings</a></li>
+                  <li><a routerLink="/discount">Discount</a></li>
                 </ul>
               </li>
             </ul>
