[DANIL] добавил страницу discount

--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -1,4 +1,4 @@
-<div class="main inner ">
+<div class="main inner fadeIn animated">
   <div class="container">
 
     <header class="content__header">
@@ -68,7 +68,7 @@
 
                 <div class="level">
                   <div class="level__img">
-                    <img src="img/discount_level.png" alt="">
+                    <img src="../assets/img//discount_level.png" alt="">
                   </div>
                   <div class="level__info">
                     <div class="info__title title-inner">Kumulovaná časta:</div>
