[Slava] add prepaid-card

--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -26,6 +26,7 @@
               <li><a routerLink="/transactions">Transactions</a></li>
               <li><a routerLink="/partners">Partners</a></li>
               <li><a routerLink="/settings">Settings</a></li>
+              <li><a routerLink="/prepaid-card">Prepaid-card</a></li>
 
             </ul>
           </li>
