[DANIL] убрал точки с запятой

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -114,8 +114,8 @@ img
 	background-size: contain
 	text-align: center
 	&-success
-		height: 24px;
-		width: 24px;
+		height: 24px
+		width: 24px
 		flex-shrink: 0
 		border-radius: 50%
 		background-color: #00AC6C
@@ -124,23 +124,23 @@ img
 		&:after
 			content: ''
 			position: absolute
-			top: 2px;
-			left: 50%;
-			height: 7px;
-			width: 14px;
+			top: 2px
+			left: 50%
+			height: 7px
+			width: 14px
 			border: 2px solid #fff
 			transform: rotate(-45deg) translateX(-50%)
 			border-width: 0 0 2px 2px
 			margin-left: -2px
 	&-warning
-		height: 24px;
+		height: 24px
 		width: 24px
 		flex-shrink: 0
 		line-height: 24px
 		text-align: center
 		font-weight: normal
 		font-style: normal
-		border-radius: 16px;
+		border-radius: 16px
 		background-color: #D01D02
 		color: #fff
 		margin-right: 7px
@@ -449,7 +449,7 @@ hr
 			&:after
 				top: auto
 				bottom: 0
-				transform: translateY(50%) translateX(-50%) rotate(-45deg);
+				transform: translateY(50%) translateX(-50%) rotate(-45deg)
 
 .nav-menu
 	> li
@@ -591,7 +591,7 @@ hr
 	width: 100%
 	align-items: flex-start
 	padding: 2.5rem 0 4.5rem
-	box-shadow: 0 30px 100px 0 rgba(0,0,0,0.08);
+	box-shadow: 0 30px 100px 0 rgba(0,0,0,0.08)
 	.item
 		flex: 1
 		position: relative
@@ -603,7 +603,7 @@ hr
 			right: 0
 			width: 1px
 			height: calc(100% + 30px)
-			background-color: $bgGrey;
+			background-color: $bgGrey
 		&:last-child
 			&:after
 				display: none
@@ -771,7 +771,7 @@ hr
 	margin-left: auto
 	&-btn
 		height: 33px
-		width: 33px;
+		width: 33px
 		background: url("../img/svg/switch-btn.svg")
 		background-position: center
 		background-size: 33px
@@ -1090,7 +1090,7 @@ hr
 				background-color: $bgAccentSecondDark
 				font-size: 1.8rem
 				line-height: 2.3rem
-				border: 1px solid #3A4D7D;
+				border: 1px solid #3A4D7D
 				font-weight: normal
 		tbody
 			.tr-content
@@ -1180,8 +1180,8 @@ hr
 					.circle
 						margin-right: 11px
 					.loader
-						margin-right: 11px;
-						margin-left: -4px;
+						margin-right: 11px
+						margin-left: -4px
 				.rating .star
 					cursor: default
 		.currency
@@ -1221,15 +1221,15 @@ hr
 					height: 6.2rem
 					padding: 0
 					border: none
-					border-bottom: 1px solid #B7BECE;
-					border-right: 1px solid #B7BECE;
+					border-bottom: 1px solid #B7BECE
+					border-right: 1px solid #B7BECE
 					cursor: default
 					&:first-child
 						width: 12.4rem
 			tbody
 				tr:last-child
 					td
-						border-top: 1px solid #B7BECE;
+						border-top: 1px solid #B7BECE
 					td:first-child
 						border-top-color: #1B2C58
 				tr:first-child
@@ -1244,7 +1244,7 @@ hr
 						background-color: $bgAccentSecond
 						color: #fff
 						border-bottom-color: #1B2C58
-						justify-content: flex-start;
+						justify-content: flex-start
 						padding-left: 1.5rem
 					.currency
 						&-icons
@@ -1266,9 +1266,9 @@ hr
 						&:first-child
 							border-bottom-color: #1B2C58
 						.currency
-							-webkit-writing-mode: vertical-rl;
-							writing-mode: tb-rl;
-							transform: rotate(180deg);
+							-webkit-writing-mode: vertical-rl
+							writing-mode: tb-rl
+							transform: rotate(180deg)
 							&-icons
 								margin-bottom: 7px
 							&-name
@@ -1280,9 +1280,9 @@ hr
 								position: absolute
 								bottom: 0
 								left: 0
-								width: 0;
-								height: 0;
-								border-style: solid;
+								width: 0
+								height: 0
+								border-style: solid
 								border-width: 12.25rem 0 0 12.25rem
 								border-color: transparent transparent transparent $bgAccentSecond
 							&:after
@@ -1290,11 +1290,11 @@ hr
 								position: absolute
 								top: 0
 								left: 0
-								width: 0;
-								height: 0;
-								border-style: solid;
+								width: 0
+								height: 0
+								border-style: solid
 								border-width: 0 12.25rem 12.25rem 0
-								border-color: transparent $bgAccentSecondDark transparent transparent;
+								border-color: transparent $bgAccentSecondDark transparent transparent
 							&-send
 								z-index: 2
 								position: relative
@@ -1308,9 +1308,9 @@ hr
 								position: absolute
 								top: 2rem
 								right: 3px
-								-webkit-writing-mode: vertical-rl;
-								writing-mode: tb-rl;
-								transform: rotate(180deg);
+								-webkit-writing-mode: vertical-rl
+								writing-mode: tb-rl
+								transform: rotate(180deg)
 
 .discounts, .landing
 	&:after
@@ -1357,12 +1357,12 @@ hr
 		margin-bottom: 3rem
 		position: relative
 		&:before
-			content: "";
+			content: ""
 			position: absolute
 			display: block
 			top: 0
 			left: 0
-			height: 1px;
+			height: 1px
 			border-bottom: 1px solid $borderGrey
 			margin-left: -2.3rem
 			width: calc(100% + 4.6rem)
@@ -1521,14 +1521,14 @@ hr
 	display: -o-flex
 	display: flex
 	align-items: center
-	height: 5.1rem;
-	width: 100%;
-	border: 1px solid #b7bece;
+	height: 5.1rem
+	width: 100%
+	border: 1px solid #b7bece
 	border-right-color: transparent
-	border-radius: 4px;
-	background-color: #fff;
-	position: relative;
-	z-index: 5;
+	border-radius: 4px
+	background-color: #fff
+	position: relative
+	z-index: 5
 	input
 		display: none
 	&__name
@@ -1570,19 +1570,19 @@ hr
 
 .line-sides
 	width: 100%
-	position: relative;
-	overflow: hidden;
-	white-space: nowrap;
+	position: relative
+	overflow: hidden
+	white-space: nowrap
 	text-align: center
 	margin: 3.2rem 0
 	&:before, &:after
-		content: "";
-		position: relative;
-		display: inline-block;
-		width: 50%;
-		height: 1px;
-		vertical-align: middle;
-		background-clip: content-box;
+		content: ""
+		position: relative
+		display: inline-block
+		width: 50%
+		height: 1px
+		vertical-align: middle
+		background-clip: content-box
 		border-bottom: 1px solid $borderGrey
 	&:before
 		left: -15px
@@ -1613,8 +1613,8 @@ hr
 	width: calc(100% + 4.6rem)
 	.dot
 		display: inline-block
-		height: 10px;
-		width: 10px;
+		height: 10px
+		width: 10px
 		border-radius: 50%
 		margin-right: 1rem
 		background-color: $bgGrey
@@ -1872,7 +1872,7 @@ hr
 		font-size: 2.2rem
 		line-height: 2.9rem
 		font-weight: bold
-		border-radius: 3px;
+		border-radius: 3px
 		background-color: $bgAccentSecond
 		background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill: none; stroke: #fff; stroke-width: 7; stroke-dasharray: 10 8'/></svg>");
 		position: absolute
@@ -2008,7 +2008,7 @@ hr
 	align-items: center
 	justify-content: center
 	width: 100%
-	direction: rtl;
+	direction: rtl
 	.star
 		display: inline-block
 		vertical-align: top
@@ -2085,7 +2085,7 @@ hr
 		height: 5.1rem
 		width: 100%
 		border: 1px solid $bgAccentSecondDark
-		border-radius: 4px;
+		border-radius: 4px
 		background-color: #E6EAF5
 		padding: 0 2.4rem
 		padding-right: calc(7.5rem)
