--- a/src/assets/sass/popup_and_hamburger.sass
+++ b/src/assets/sass/popup_and_hamburger.sass
@@ -14,13 +14,22 @@
 
 
 // POPUP
+
+
+.cdk-overlay-container
+  .mat-dialog-container
+   padding: 0
+  .cdk-overlay-dark-backdrop
+    background-color: rgba(11, 11, 11, 0.8)
+
+
 .popup
   background: white
   padding: 4.7rem 0 2rem
   text-align: left
   max-width: 60rem
   min-height: 30rem
-  margin: 40px auto
+  margin: 0 auto
   position: relative
   font-family: $sans
   .popup-content
