--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -35,7 +35,7 @@
       </nav>
 
       <div class="header-btn">
-        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Registrace</a>
+        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialog($event)">Registrace</a>
         <a href="#" class="btn btn-accent rippler rippler-default">Přihlásit</a>
 
         <!-- <div class="dropdown">
