[Slava] при смене роута scrollToTop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 
 <main [ngClass]="{'effects-blur': isBlur}">
-  <router-outlet></router-outlet>
+  <router-outlet (activate)="onActivate($event)"></router-outlet>
 </main>
 
 
