--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -96,7 +96,7 @@ input, textarea, button
 	outline: none
 svg path
 	transition: all .25s ease
-a, span	
+a, span
 	transition: color .25s ease
 p
 	margin: 0
@@ -219,7 +219,7 @@ table tr td, table tr th
 		text-align: left
 	&[align=center]
 		text-align: center
-hr 
+hr
 	display: block
 	width: 100%
 	border-top: 1px solid $borderGrey
@@ -1147,7 +1147,7 @@ hr
 					border-bottom: none
 				&:nth-child(4n - 1) td
 					background-color: #F8F9FA
-				
+
 			td
 				border-width: 1px
 				border-style: solid
@@ -1273,7 +1273,7 @@ hr
 								margin-bottom: 7px
 							&-name
 								margin-right: -2px
-						
+
 						._direction
 							&:before
 								content: ''
@@ -1314,8 +1314,8 @@ hr
 
 .discounts, .landing
 	&:after
-		height: 350px		
-.discounts						
+		height: 350px
+.discounts
 	.content__header .sub-title
 		margin-bottom: 7.8rem
 	.main__wrapper .content
@@ -1323,7 +1323,7 @@ hr
 		margin: 0 auto 15rem
 	.hard-table.hz-scroll table
 		width: 74.4rem
-  
+
 .quote
 	display: block
 	width: 100%
@@ -1698,7 +1698,6 @@ hr
 
 	&.has-warn
 		color: #D2A884
-		background-color: $warnColor
 		&:before, &:after
 			border-color: $warnColor
 		.error-label
@@ -1874,7 +1873,7 @@ hr
 		font-weight: bold
 		border-radius: 3px
 		background-color: $bgAccentSecond
-		background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill: none; stroke: #fff; stroke-width: 7; stroke-dasharray: 10 8'/></svg>");
+		background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill: none; stroke: #fff; stroke-width: 7; stroke-dasharray: 10 8'/></svg>")
 		position: absolute
 		top: -8.5rem
 		left: 7rem
