--- a/src/assets/sass/mozilla-fix.sass
+++ b/src/assets/sass/mozilla-fix.sass
@@ -1,12 +1,19 @@
 @-moz-document url-prefix()
   .input-exchange input
-    max-width: 80%
-
-
-@media only screen and (max-width : 1200px)
-  .input-exchange input
     max-width: 75%
+  .input-exchange .input
+    justify-content: space-between
 
-@media only screen and (max-width : 991px)
-  .input-exchange input
-    max-width: 100%
+
+  @media only screen and (max-width : 1200px)
+    .input-exchange input
+      max-width: 70%
+
+  @media only screen and (max-width : 991px)
+    .input-exchange input
+      max-width: 90%
+
+
+  @media only screen and (max-width : 479px)
+    .input-exchange input
+      max-width: 73%
