[DANIL] поправил поп-ап перенос кнопок

--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -16,7 +16,7 @@
   </p>
 
   <div class="btn-wrapper text-center">
-    <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Přihlásit</a><br>
-    <a href="#" class="btn btn-accent rippler rippler-default">Nová směna</a>
+    <div class="item"><a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Přihlásit</a></div>
+    <div class="item"><a href="#" class="btn btn-accent rippler rippler-default">Nová směna</a></div>
   </div>
 </div>
