--- a/src/assets/sass/popup_and_hamburger.sass
+++ b/src/assets/sass/popup_and_hamburger.sass
@@ -47,6 +47,12 @@
   .btn-wrapper
     margin-top: 3.6rem
     margin-bottom: 3.6rem
+    .item
+      display: block
+      width: 100%
+      margin-bottom: .5rem
+      &:last-child
+        margin-bottom: 0
     .btn
       width: 20rem
 
