--- a/src/assets/css/styles-app-loading.css
+++ b/src/assets/css/styles-app-loading.css
@@ -1,59 +1,152 @@
-body, html {
-  height: 100%;
-}
-.app-loading {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-.app-loading .spinner {
-  height: 200px;
-  width: 200px;
-  animation: rotate 2s linear infinite;
-  transform-origin: center center;
-  position: absolute;
+/*body, html {*/
+  /*height: 100%;*/
+/*}*/
+/*.app-loading {*/
+  /*position: relative;*/
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*align-items: center;*/
+  /*justify-content: center;*/
+  /*height: 100%;*/
+/*}*/
+/*.app-loading .spinner {*/
+  /*height: 200px;*/
+  /*width: 200px;*/
+  /*animation: rotate 2s linear infinite;*/
+  /*transform-origin: center center;*/
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*bottom: 0;*/
+  /*left: 0;*/
+  /*right: 0;*/
+  /*margin: auto;*/
+/*}*/
+/*.app-loading .spinner .path {*/
+  /*stroke-dasharray: 1, 200;*/
+  /*stroke-dashoffset: 0;*/
+  /*animation: dash 1.5s ease-in-out infinite;*/
+  /*stroke-linecap: round;*/
+  /*stroke: #ddd;*/
+/*}*/
+
+/*.app-loading .logo {*/
+  /*width: 200px;*/
+  /*height: 200px;*/
+
+  /*background: url(../../assets/img/logo.png) center center no-repeat;*/
+  /*background-position-x: 62px;*/
+  /*background-size: contain;*/
+/*}*/
+
+/*@keyframes rotate {*/
+  /*100% {*/
+    /*transform: rotate(360deg);*/
+  /*}*/
+/*}*/
+/*@keyframes dash {*/
+  /*0% {*/
+    /*stroke-dasharray: 1, 200;*/
+    /*stroke-dashoffset: 0;*/
+  /*}*/
+  /*50% {*/
+    /*stroke-dasharray: 89, 200;*/
+    /*stroke-dashoffset: -35px;*/
+  /*}*/
+  /*100% {*/
+    /*stroke-dasharray: 89, 200;*/
+    /*stroke-dashoffset: -124px;*/
+  /*}*/
+/*}*/
+
+
+
+/*body {*/
+  /*background-color: #222;*/
+/*}*/
+#preloader {
+  position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
-  margin: auto;
+  width: 100%;
+  height: 100%;
+  background-color: #222;
 }
-.app-loading .spinner .path {
-  stroke-dasharray: 1, 200;
-  stroke-dashoffset: 0;
-  animation: dash 1.5s ease-in-out infinite;
-  stroke-linecap: round;
-  stroke: #ddd;
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #9370DB;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #BA55D3;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #FF00FF;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
 }
 
-.app-loading .logo {
-  width: 200px;
-  height: 200px;
+#preloader .logo {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  top: 0;
+  left: 0;
 
-  background: url(../../assets/img/logo.png) center center no-repeat;
-  background-position-x: 62px;
-  background-size: contain;
+  background: url(../../assets/img/logo_preload.png) center  no-repeat;
+  background-size: 52px 52px;
 }
 
-@keyframes rotate {
+
+@-webkit-keyframes spin {
+  0%   {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
   100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
-@keyframes dash {
-  0% {
-    stroke-dasharray: 1, 200;
-    stroke-dashoffset: 0;
-  }
-  50% {
-    stroke-dasharray: 89, 200;
-    stroke-dashoffset: -35px;
+@keyframes spin {
+  0%   {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    stroke-dasharray: 89, 200;
-    stroke-dashoffset: -124px;
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
