[DANIL] создал попап входа и добавил разметку для попап регистрации

--- a/src/app/_dialog/dialog-auth/dialog-auth.component.html
+++ b/src/app/_dialog/dialog-auth/dialog-auth.component.html
@@ -1,6 +1,6 @@
 <div id="medium-dialog" class="popup popup-user blank tape-top ">
   <div class="popup-title">
-    <h2 class="h2 text-center">Registration.</h2>
+    <h2 class="h2 text-center">Auth</h2>
   </div>
   <div class="popup-subtitle">
     <p class="p_middle mobile-small">Stav transakce můžete <b>sledovat</b> přes tento <b>odkaz</b>.</p>
@@ -19,25 +19,18 @@
       <span class="error-label">Hesla se neshodují</span>
     </label>
 
-    <label class="form-group has-error">
-      <span class="form-title">Password again:</span>
-      <input type="password" class="form-control" required="">
-      <span class="error-label">Hesla se neshodují</span>
-    </label>
-
-    <label class="checkbox">
-      <input type="checkbox" class="checkbox-cotrol">
-      <span class="checkbox-icons"></span>
-      <span class="checkbox-title">I agree to the <a href="#" class="link">Terms and Conditions</a> and <a href="#" class="link">Privacy Policy</a></span>
-    </label>
-
     <div class="form-btn between-children">
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
-
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Register</a>
+        <a href="#" class="btn btn-accent rippler rippler-default">auth</a>
         <input type="submit" hidden>
       </label>
+    </div>
+
+    <div class="forgot">
+      <div class="text-center tip-link">
+        <a href="#" class="link">Forgot password?</a>
+      </div>
     </div>
   </form>
 
