--- a/src/assets/sass/popup_and_hamburger.sass
+++ b/src/assets/sass/popup_and_hamburger.sass
@@ -35,6 +35,8 @@ html.cdk-global-scrollblock
   margin: 0 auto
   position: relative
   font-family: $sans
+  &-user
+    padding-bottom: 8rem
   .popup-content
     margin-top: 5.5rem
   &-title
@@ -44,7 +46,13 @@ html.cdk-global-scrollblock
   .link
     font-size: 2rem
     line-height: 2.6rem
-
+  .form
+    max-width: 35rem
+    margin: 0 auto
+    &-btn .btn-accent
+      min-width: 15rem
+    .forgot
+      margin-top: 3.5rem
 
 .popup-success, .popup-error
   .btn-wrapper
