--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -35,8 +35,8 @@
       </nav>
 
       <div class="header-btn">
-        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialog($event)">Registrace</a>
-        <a href="#" class="btn btn-accent rippler rippler-default">Přihlásit</a>
+        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="openDialogReg($event)">Registrace</a>
+        <a href="#" class="btn btn-accent rippler rippler-default" (click)="openDialogAuth($event)">Přihlásit</a>
 
         <!-- <div class="dropdown">
                       <a href="#" class="btn btn-accent rippler rippler-default js-dropdown-link"><span class="dropdown-link">Přihlásit</span></a>
