[DANIL] последние правки

--- a/src/assets/sass/popup_and_hamburger.sass
+++ b/src/assets/sass/popup_and_hamburger.sass
@@ -53,6 +53,9 @@ html.cdk-global-scrollblock
       min-width: 15rem
     .forgot
       margin-top: 3.5rem
+    .link
+      font-size: 1.6rem
+      line-height: 2.4rem
 
 .popup-success, .popup-error
   .btn-wrapper
