--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -6,27 +6,33 @@
     <p class="p_middle mobile-small">Stav transakce můžete <b>sledovat</b> přes tento <b>odkaz</b>.</p>
   </div>
 
-  <form action="#" class="form">
+  <!--<form action="#" class="form" [formGroup]="registrationForm" (submit)="registration($event)" #regForm="ngForm">-->
+  <form action="#" class="form" (submit)="submit($event)" novalidate>
 
     <label class="form-group">
+      <span class="form-title">Your name:</span>
+      <input [(ngModel)]="userRegistr.name" name="name" type="text" class="form-control">
+    </label>
+
+     <label class="form-group">
       <span class="form-title">Your e-mail (account login):</span>
-      <input type="text" class="form-control">
+      <input [(ngModel)]="userRegistr.email" name="email"  type="text" class="form-control">
     </label>
 
     <label class="form-group">
       <span class="form-title">Password:</span>
-      <input type="password" class="form-control" required="">
+      <input [(ngModel)]="userRegistr.password" name="password" type="password" class="form-control" required="">
       <span class="error-label">Hesla se neshodují</span>
     </label>
 
     <label class="form-group has-error">
       <span class="form-title">Password again:</span>
-      <input type="password" class="form-control" required="">
+      <input [(ngModel)]="userRegistr.repassword" name="repassword"  type="password" class="form-control" required="">
       <span class="error-label">Hesla se neshodují</span>
     </label>
 
     <label class="checkbox">
-      <input type="checkbox" class="checkbox-cotrol">
+      <input [(ngModel)]="policeAgree" type="checkbox" name="policeAgree" class="checkbox-cotrol" required>
       <span class="checkbox-icons"></span>
       <span class="checkbox-title">I agree to the <a href="#" class="link">Terms and Conditions</a> and <a href="#" class="link">Privacy Policy</a></span>
     </label>
@@ -35,7 +41,7 @@
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
 
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Register</a>
+        <a class="btn btn-accent rippler rippler-default">Register</a>
         <input type="submit" hidden>
       </label>
     </div>
