--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -6,39 +6,50 @@
     <p class="p_middle mobile-small">Stav transakce můžete <b>sledovat</b> přes tento <b>odkaz</b>.</p>
   </div>
 
-  <!--<form action="#" class="form" [formGroup]="registrationForm" (submit)="registration($event)" #regForm="ngForm">-->
-  <form action="#" class="form" (submit)="submit($event)" novalidate>
+  <form action="#" class="form" [formGroup]="userRegistrForm" (submit)="submit($event)"  #regForm="ngForm" novalidate>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error': userRegistrForm.controls['name'].hasError('required') && regForm.submitted}" >
       <span class="form-title">Your name:</span>
-      <input [(ngModel)]="userRegistr.name" name="name" type="text" class="form-control">
+      <input [(ngModel)]="userRegistr.name" formControlName="name"  name="name" type="text" class="form-control">
+      <span *ngIf="userRegistrForm.controls['name'].hasError('required') && regForm.submitted" class="error-label">Hesla se neshodují</span>
     </label>
 
-     <label class="form-group">
+     <label class="form-group"
+            [ngClass]="{'has-error': (userRegistrForm.controls['email'].hasError('required')
+            || userRegistrForm.controls['email'].hasError('email')
+            || userRegistrForm.controls['email'].hasError('minLength')
+            || userRegistrForm.controls['email'].hasError('maxLength'))
+            && regForm.submitted}">
       <span class="form-title">Your e-mail (account login):</span>
-      <input [(ngModel)]="userRegistr.email" name="email"  type="text" class="form-control">
+      <input [(ngModel)]="userRegistr.email" formControlName="email" (blur)="checkEmailExist()" name="email"  type="text" class="form-control">
+       <span *ngIf="(userRegistrForm.controls['email'].hasError('required') || userRegistrForm.controls['email'].hasError('email')) && regForm.submitted" class="error-label">Hesla se neshodují</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group"
+           [ngClass]="{'has-error': (userRegistrForm.controls['password'].hasError('required')
+           || userRegistrForm.controls['password'].hasError('minLength')
+           || userRegistrForm.controls['password'].hasError('maxLength'))
+           && regForm.submitted}">
       <span class="form-title">Password:</span>
-      <input [(ngModel)]="userRegistr.password" name="password" type="password" class="form-control" required="">
-      <span class="error-label">Hesla se neshodují</span>
+      <input [(ngModel)]="userRegistr.password" formControlName="password"  name="password" type="password" class="form-control" required="">
+      <span *ngIf="userRegistrForm.controls['password'].hasError('required') && regForm.submitted" class="error-label">Hesla se neshodují</span>
     </label>
 
-    <label class="form-group has-error">
+
+    <label class="form-group" [ngClass]="{'has-error': userRegistrForm.controls['confirmPassword'].hasError('matchOther') && regForm.submitted}">
       <span class="form-title">Password again:</span>
-      <input [(ngModel)]="userRegistr.repassword" name="repassword"  type="password" class="form-control" required="">
-      <span class="error-label">Hesla se neshodují</span>
+      <input [(ngModel)]="userRegistr.repassword" formControlName="confirmPassword" name="repassword"  type="password" class="form-control" required="">
+      <span *ngIf="userRegistrForm.controls['confirmPassword'].hasError('matchOther') && regForm.submitted" class="error-label">Heslsa se neshodují</span>
     </label>
 
-    <label class="checkbox">
-      <input [(ngModel)]="policeAgree" type="checkbox" name="policeAgree" class="checkbox-cotrol" required>
+    <label class="checkbox" [ngClass]="{'has-error': !policeAgree && regForm.submitted}">
+      <input [(ngModel)]="policeAgree" type="checkbox" name="policeAgree" class="checkbox-cotrol" required [ngModelOptions]="{standalone: true}">
       <span class="checkbox-icons"></span>
       <span class="checkbox-title">I agree to the <a href="#" class="link">Terms and Conditions</a> and <a href="#" class="link">Privacy Policy</a></span>
     </label>
 
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="onNoClick($event)">Back</a>
 
       <label>
         <a class="btn btn-accent rippler rippler-default">Register</a>
