--- a/src/app/_dialog/dialog-auth/dialog-auth.component.html
+++ b/src/app/_dialog/dialog-auth/dialog-auth.component.html
@@ -6,7 +6,16 @@
     <p class="p_middle mobile-small">Stav transakce můžete <b>sledovat</b> přes tento <b>odkaz</b>.</p>
   </div>
 
-  <form action="#" class="form" (submit)="submit($event)" [formGroup]="userAuthForm"  #authForm="ngForm" novalidate >
+  <div class="text-center js-deleteParent" *ngIf="userNotFound">
+    <div class="alert alert-error">
+      <p>Error: Email or password is incorrect</p>
+      <a href="#" class="btn-close js-deleteBlock">x</a>
+    </div>
+  </div>
+
+
+
+  <form action="#" class="form" (submit)="submit($event)" [formGroup]="userAuthForm"  #authForm="ngForm" novalidate>
 
     <label class="form-group"
            [ngClass]="{'has-error': (userAuthForm.controls['email'].hasError('email')
@@ -31,6 +40,13 @@
         && authForm.submitted" class="error-label">Hesla se neshodují</span>
     </label>
 
+    <div class="forgot">
+      <div class="text-center tip-link">
+        <a href="#" class="link">Forgot password?</a>
+      </div>
+    </div>
+
+
     <div class="form-btn between-children">
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="onNoClick($event)">Back</a>
       <label>
@@ -39,11 +55,7 @@
       </label>
     </div>
 
-    <div class="forgot">
-      <div class="text-center tip-link">
-        <a href="#" class="link">Forgot password?</a>
-      </div>
-    </div>
+
   </form>
 
 </div>
